Fixed background not showing

--- a/oflow/app/assets/stylesheets/registration.scss
+++ b/oflow/app/assets/stylesheets/registration.scss
@@ -27,6 +27,11 @@ h1{
   padding-bottom: 30px;
 }
 
+body, html {
+  height: 100%;
+  margin: 0;
+}
+
 /*
 h1:after{
   content: ' ';
